# lbrxVoicePro

./: .gitignore  INTERNAL_ANALYSIS.mdx  LICENSE  README.md  THIRD_PARTY_LICENSES.md  better_audio_response.py  generate_rays_summary.py  hello.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
api/: main.py
core/: __init__.py  audio_recorder.py  pipeline.py  vad.py
dataset/: collector.py  formatter.py
docs/: ARCHITECTURE.md
tests/: __init__.py  test_core.py
