[project]
name = "lbrxvoicepro"
version = "1.0.0"
description = "Universal Voice AI Pipeline for Dataset Collection and Conversational AI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "LIBRAXIS Team", email = "team@libraxis.com"}]

dependencies = [
    # Core ML
    "mlx>=0.24.0",
    "mlx-whisper>=0.4.0",
    "torch>=2.0.0",
    "silero-vad>=5.0",
    
    # Audio processing
    "soundfile>=0.12.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    
    # API & Async
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    
    # RAG & LLM
    "chromadb>=0.4.0",
    "sentence-transformers>=3.0.0",
    
    # Utils
    "pydantic>=2.0.0",
    "python-multipart>=0.0.18",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

ui = [
    "textual>=3.0.0",
    "plotext>=5.0.0",
]

[project.scripts]
lbrxvoicepro = "lbrxvoicepro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]